Fixed slurp-fail anchors trying to import and read from the tracker (bug 524061, r=gal).