js/src/jsrecursion.cpp
@@ -447,7 +447,10 @@ TraceRecorder::slurpDownFrames(jsbytecode* return_pc)
     cx->fp->regs->pc = exit->pc;
     js_CaptureStackTypes(cx, frameDepth, typeMap);
     cx->fp->regs->pc = oldpc;
-    typeMap[downPostSlots] = determineSlotType(&stackval(-1));
+    if (!anchor || anchor->exitType != RECURSIVE_SLURP_FAIL_EXIT)
+        typeMap[downPostSlots] = determineSlotType(&stackval(-1));
+    else
+        typeMap[downPostSlots] = anchor->stackTypeMap()[anchor->numStackSlots - 1];
     determineGlobalTypes(&typeMap[exit->numStackSlots]);
 #if defined JS_JIT_SPEW
     TreevisLogExit(cx, exit);
@@ -553,7 +556,7 @@ TraceRecorder::slurpDownFrames(jsbytecode* return_pc)
     RecursiveSlotMap slotMap(*this, downPostSlots, rval_ins);
     for (unsigned i = 0; i < downPostSlots; i++)
         slotMap.addSlot(typeMap[i]);
-    slotMap.addSlot(&stackval(-1));
+    slotMap.addSlot(&stackval(-1), typeMap[downPostSlots]);
     VisitGlobalSlots(slotMap, cx, *treeInfo->globalSlots);
     debug_only_print0(LC_TMTracer, "Compiling up-recursive slurp...\n");
     exit = copy(exit);
